modify: add config option 'scheme'

--- a/src/main/resources/blog.properties
+++ b/src/main/resources/blog.properties
@@ -1,12 +1,15 @@
 # 上传文件保存路径
 res.save.path=E:\\sec\\test\\blogdata\\upload
 # 上传文件访问路径
-res.access.path=http://localhost:8080/blog
+res.access.path=localhost:8080/blog
 
 # 静态化资源保存路径
 html.save.path=E:\\sec\\test\\blogdata\\html
 # 静态化资源访问路径
-html.access.path=http://localhost:8080/blog
+html.access.path=localhost:8080/blog
+
+# scheme
+http.scheme=http
 
 # 数据库
 jdbc.url=jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
