modify: save article category

--- a/src/main/resources/blog.properties
+++ b/src/main/resources/blog.properties
@@ -12,8 +12,8 @@ html.access.path=localhost:8080/blog
 http.scheme=http
 
 # Êý¾Ý¿â
-jdbc.url=jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://127.0.0.1:3306/sceonblog?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 jdbc.username=root
-jdbc.password=*******
+jdbc.password=123456
 database.encode=utf-8
 jdbc.driverClassName=com.mysql.jdbc.Driver
