--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,7 +40,7 @@
         <filter-class>top.sceon.blog.filter.LoginFilter</filter-class>
         <init-param>
             <param-name>loginPage</param-name>
-            <param-value>/login.jsp</param-value>
+            <param-value>/manage/login</param-value>
         </init-param>
         <init-param>
             <param-name>excludes</param-name>
